--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "jsx": "react-jsx",
     "baseUrl": "src",
     "paths": {
-      "common/*": ["../../common/src/*"]
+      "common/*": ["../common/src/*"]
     }
   }
 }
